move iOS blurry fixes into AFUI

--- a/css/src/main.css
+++ b/css/src/main.css
@@ -156,17 +156,12 @@ body {
 	overflow-y:auto;
 	overflow-x:hidden;
 	-webkit-overflow-scrolling:touch;
-	-webkit-backface-visibility: hidden;
-	-webkit-perspective: 1000;
+	-webkit-backface-visibility: visible;	
 	padding:10px;
 	padding-top:0px;
 } /* This class is applied to the divs that contain the various "views" or pages of the app. */
 
 
-#afui .panel > * {
-	-webkit-backface-visibility: hidden;
-	-webkit-perspective: 1000;
-}
 
 
 /**********************************************************
